--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danyo</title>
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/color.css">
+    <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
-    <header></header>
+    <header>Danyo</header>
     <main></main>
     <footer></footer>
 </body>
