--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danyo</title>
+    <title>Life Is Egg</title>
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/color.css">
     <link rel="stylesheet" href="css/layout.css">
 </head>
 <body>
-    <header>Danyo</header>
+    <header>LIE</header>
     <main></main>
     <footer></footer>
 </body>
